# pyclaw

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/pyclaw/: __init__.py  agent.py  cli.py  config.py  models.py  models.yml  prompts.py  workspace.py
src/pyclaw/channels/: __init__.py  base.py  discord_ch.py  slack_ch.py  telegram.py
src/pyclaw/heartbeat/: __init__.py  scheduler.py
src/pyclaw/memory/: __init__.py  loader.py
src/pyclaw/sessions/: __init__.py  manager.py
src/pyclaw/tools/: __init__.py  cron_tool.py  message.py  web_search.py
tests/: conftest.py  test_agent.py  test_cli.py  test_config.py  test_models.py
